# spendsmart

./: .gitignore  Taskfile.dist.yml  pyproject.toml
src/spendsmart/: app.py  controllers.py  domainmodels.py  utils.py
src/spendsmart/datamodels/: repos.py  tables.py
src/spendsmart/statements/: dataclasses.py
src/spendsmart/statements/parsers/: __init__.py  qfxparser.py
src/spendsmart/transactions/: datamodels.py
src/spendsmart/views/: __init__.py  app.py  styles.tcss
